

Added:
  src/
    drivers/assistedhuman/
        assistedhuman.cpp
        CmakeList.txt
        Driver.cpp
        Driver.h
    libs/tgfclient/
            GuiRadioButton.cpp
            GuiRadioButtonList.cpp
    modules/userinterface/legacymenu/mainscreens/
        ResearcherMenu.h
        ResearcherMenu.cpp
        DataSelectionMenu.h
        DataSelectionMenu.cpp
  data/
    data/
        img/
            radio-checked.png
            radio-checked-focused.png
            radio-unchecked.png
            radio-unchecked-focused.png
            checked-focused.png
            unchecked-focused.png
        indicators/
            *
        menu/
            ResearcherMenu.xml
            DataSelectionMenu.xml
    drivers/
        assistedhuman/
            *

Changed:
  src/
    libs/
        robottools/
            humandriver.h
                included Recorder.h
                added m_recorder
                added SetRecorder
            rtHumanDriver.cpp
                changed new_race()
                changed drive_at()
                changed shutdown()
                added   SetRecorder()
            CMakeLists.txt
                changed frontend added to ADD_SDLIB_INCLUDEDIR
                changed backend added to ADD_SDLIB_INCLUDEDIR
                changed frontend added to ADD_SDLIB_LIBRARY
                changed backend added to ADD_SDLIB_LIBRARY
        tgf/
            params.cpp
                Modified xmlGetOuputLine to write floats with full precision.
            tgf.h
                added GF_LOGGING_ENABLE and GF_LOGGING_DISABLE macro's for clearer code
        tgfclient/
            gui.h
                added   tGfuiRadioButtonList
                added   tGfuiRadioButton
                added   GfuiDrawRadioButtonList()
                added   GfuiDrawRadioButton()
                added   GfuiReleaseRadioButtonList()
                added   GfuiReleaseRadioButton()
                changed GfuiObject
            guicheckbox.cpp