@@ -6,6 +6,7 @@
 
 	<section name="dynamic controls">
 
+		<!-- Button list to determining whether to run async- or synchronously-->
 		<section name="SynchronizationButtonList">
 			<attstr name="type" val="radio button list"/>
 			<section name="options">
@@ -29,13 +30,28 @@
 			<attnum name="minimum of one" val="1"/>
 		</section>
 
+		<!-- Replay Recorder on/off-->
+		<section name="CheckboxRecorderToggle">
+			<attstr name="type" val="check box"/>
+			<attstr name="text" val="Recorder on/off"/>
+			<attstr name="tip" val="Enable/Disable the replay recorder"/>
+			<attnum name="x" val="200"/>
+			<attnum name="y" val="370"/>
+			<attnum name="image width" val="20"/>
+			<attnum name="image height" val="20"/>
+			<attstr name="color" val="0xFFFFFF"/>
+			<attstr name="font" val="small_t"/>
+			<attstr name="checked" val="no"/>
+		</section>
+
+		<!-- Cancel button-->
 		<section name="CancelButton">
 			<attstr name="type" val="text button"/>
 			<attstr name="show box" val="no"/>
 			<attstr name="text" val="Cancel"/>
 			<attstr name="tip" val="Cancel changes"/>
 			<attstr name="h align" val="left"/>
-			<attnum name="x" val="278"/>
+			<attnum name="x" val="50"/>
 			<attnum name="y" val="82"/>
 			<attnum name="width" val="120"/>
 			<attstr name="font" val="medium"/>
@@ -51,6 +67,7 @@
 			<attstr name="pushed image" val="data/img/button-left-pushed.png"/>
 		</section>
 
+		<!-- Apply button-->
 		<section name="ApplyButton">
 			<attstr name="type" val="text button"/>
 			<attstr name="show box" val="no"/>
@@ -87,6 +104,15 @@
 			<attnum name="x" val="20"/>
 			<attnum name="y" val="400"/>
 			<attstr name="text" val="Sync Option"/>
+			<attstr name="h align" val="left"/>
+			<attstr name="font" val="medium_t"/>
+		</section>
+
+		<section name="3">
+			<attstr name="type" val="label"/>
+			<attnum name="x" val="200"/>
+			<attnum name="y" val="400"/>
+			<attstr name="text" val="Replay Recorder"/>
 			<attstr name="h align" val="left"/>
 			<attstr name="font" val="medium_t"/>
 		</section>
