@@ -20,6 +20,7 @@ public:
     void SetIndicatorSettings(tIndicator p_indicators);
     void SetInterventionType(InterventionType p_type);
     void SetPControlSettings(tParticipantControl p_pControl);
+    void SetReplayRecorderSetting(bool p_replayRecorderOn);
 
     void SetMaxTime(int p_maxTime);
     void SetUserId(char* p_userId);
@@ -33,6 +34,7 @@ public:
     tIndicator GetIndicatorSettings();
     InterventionType GetInterventionType();
     tParticipantControl GetPControlSettings();
+    bool GetReplayRecorderSetting();
 
     static Mediator* GetInstance();
 #ifdef TEST
