@@ -21,6 +21,7 @@ private:
     InterventionFactory m_interventionFactory;
     char m_blackBoxFilePath[BLACKBOX_PATH_SIZE];
     bool m_asyncConnection = true;
+    bool m_replayRecorderOn = false;
 
 public:
     /* TODO: Return IDataStorage */ void GetDataStorage();
@@ -37,6 +38,9 @@ public:
 
     void SetPControlSettings(tParticipantControl p_pControl);
     tParticipantControl GetPControlSettings() const;
+
+    void SetReplayRecorderSetting(bool p_replayRecorderOn);
+    bool GetReplayRecorderSetting() const;
 
     void SetMaxTime(int p_maxTime);
     int GetMaxTime() const;
