@@ -26,6 +26,8 @@ Added:
         ResearcherMenu.cpp
         DataSelectionMenu.h
         DataSelectionMenu.cpp
+        DeveloperMenu.h
+        DeveloperMenu.cpp
   data/
     data/
         img/
@@ -40,6 +42,7 @@ Added:
         menu/
             ResearcherMenu.xml
             DataSelectionMenu.xml
+            DeveloperMenu.xml
     drivers/
         assistedhuman/
             *
@@ -173,6 +176,7 @@ Changed:
             legacymenu.cpp
                 included "ResearcherMenu.h"
                 included "DataSelectionMenu.h"
+                included "DeveloperMenu.h"
                 added    ActivateResearcherMenu()
                 changed  backLoad()
                 changed  activate()
